# xmrs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: amiga.rs  infos.rs  instr.xi  note.xm  s3m.rs  sid.rs  xmi.rs  xmrs.rs
src/: envelope.rs  instr_default.rs  instr_ekn.rs  instr_midi.rs  instr_opl.rs  instr_robsid.rs  instr_sid.rs  instr_vibrato.rs  instrument.rs  lib.rs  module.rs  note.rs  patternslot.rs  period_helper.rs  prelude.rs  sample.rs  vibrato.rs
src/amiga/: amiga_module.rs  amiga_sample.rs  element.rs  mod.rs  serde_helper.rs
src/f32helper/: mod.rs
src/s3m/: mod.rs  s3m_effect.rs  s3m_module.rs  serde_helper.rs
src/sid/: instr_helper.rs  mod.rs  one_sid.rs  pattern_helper.rs  sid_module.rs  sound_fx.rs
src/sid/songs/: ace_2.sid  human_race.sid
src/xm/: helper.rs  mod.rs  serde_helper.rs  xi_instrument.rs  xiinstrument.rs  xmheader.rs  xminstrument.rs  xmmodule.rs  xmpattern.rs  xmpatternslot.rs  xmsample.rs  xp_pattern.rs  xt_track.rs
