[package]
name = "xmrs"
version = "0.6.0"
edition = "2021"
description = "A library to edit SoundTracker data with pleasure "
license = "MIT"
authors = ["Sebastien Bechet"]
documentation = "https://docs.rs/xmrs"
repository = "https://codeberg.org/sbechet/xmrs"
readme = "README.md"

keywords = ["xm", "module", "mod", "s3m", "soundtracker"]
categories = ["multimedia::audio", "embedded", "no-std"]

[dependencies]
bincode = "1.3"
clap = { version = "4.5", optional = true, features = ["cargo", "derive"] }
num_enum = { version = "0.7", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde-big-array = "0.5"

[features]
default = []
demo = ["clap"]

[lib]
name = "xmrs"
path = "src/lib.rs"

[examples]
rodio_player = { name = "rodio_player", path = "examples/rodio_player.rs", features=["demo"] }
cpal_player = { name = "cpal_player", path = "examples/cpal_player.rs", features=["demo"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

