[package]
name = "xmrs"
version = "0.7.1"
edition = "2021"
description = "A library to edit SoundTracker data with pleasure "
license = "MIT"
authors = ["Sebastien Bechet"]
documentation = "https://docs.rs/xmrs"
repository = "https://codeberg.org/sbechet/xmrs"
readme = "README.md"

keywords = ["xm", "module", "mod", "s3m", "soundtracker"]
categories = ["multimedia::audio", "embedded", "no-std"]

[dependencies]
bincode = { version = "2.0.0-rc.3", features=["alloc", "derive", "serde"], default-features = false }
clap = { version = "4.5", optional = true, features = ["cargo", "derive"] }
num_enum = { version = "0.7", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde-big-array = "0.5"
num-traits = { version = "0.2.17",default-features = false, optional=true } # libm wrapper
micromath = { version = "2.1.0", optional=true }

[features]
default = ["micromath"]
std = ["bincode/std", "num_enum/std", "serde/std"]
demo = ["clap"]
libm = ["num-traits/libm"]
micromath = ["dep:micromath"]

[lib]
name = "xmrs"
path = "src/lib.rs"

[examples]
rodio_player = { name = "rodio_player", path = "examples/rodio_player.rs", features=["demo"] }
cpal_player = { name = "cpal_player", path = "examples/cpal_player.rs", features=["demo"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

